--- a/app/index.html
+++ b/app/index.html
@@ -1,15 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk" class="page">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Діана Линва - Записатись на консультацію</title>
   <link rel="stylesheet" href="css/style.min.css">
+  <style>
+    .page {
+      scroll-padding-top: calc(var(--header-height));
+    }
+  </style>
 </head>
 
 <body>
+  <header class="header"></header>
+  <script>
+    const startHeightValue = () => {
+      let vh = window.innerHeight * 1;
+
+      document.querySelector(':root').style.setProperty('--vh', `${vh}px`);
+
+      const pageHeader = document.querySelector('.header');
+
+      const headerHeight = pageHeader ? pageHeader.offsetHeight : 0;
+
+      document.documentElement.style.setProperty(
+        '--header-height',
+        `${headerHeight}px`,
+      );
+    }
+
+    window.addEventListener('resize', startHeightValue);
+    window.addEventListener('scroll', startHeightValue);
+
+    startHeightValue();
+  </script>
+
+
   <script src="js/main.min.js"></script>
 </body>
 
