--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="images/favicon-32x32.ico">
+  <link rel="icon" type="image/x-icon" href="images/favicon-16x16.ico">
   <title>Діана Линва - Записатись на консультацію</title>
   <link rel="stylesheet" href="css/style.min.css">
   <style>
@@ -14,31 +16,58 @@
   </style>
 </head>
 
-<body>
-  <header class="header"></header>
-  <script>
-    const startHeightValue = () => {
-      let vh = window.innerHeight * 1;
+<body class="page__body">
+  <header class="header" id="header">
+    <div class="container">
+      <nav class="nav">
+        <a class="logo" href="#">
+          <img class="logo__img" src="images/logo.svg" alt="Логотип психіатрині та психотерапевтки Діани Линви" width="334" height="100">
+        </a>
 
-      document.querySelector(':root').style.setProperty('--vh', `${vh}px`);
+        <button class="burger" aria-label="Мобільне меню" type="button">
+          <span></span>
+        </button>
 
-      const pageHeader = document.querySelector('.header');
+        <div class="nav__inner">
+          <ul class="nav__menu">
+            <li class="nav__item">
+              <a class="nav__link link" href="#consultations">
+                Консультації
+              </a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link link" href="#services">
+                Послуги
+              </a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link link" href="#about">
+                Про мене
+              </a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link link" href="#prices">
+                Ціни
+              </a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link link" href="#reviews">
+                Відгуки
+              </a>
+            </li>
+          </ul>
 
-      const headerHeight = pageHeader ? pageHeader.offsetHeight : 0;
+          <a class="nav__link link" href="tel:+46768966153">+46 76 896 61 53</a>
+        </div>
+      </nav>
+    </div>
+  </header>
 
-      document.documentElement.style.setProperty(
-        '--header-height',
-        `${headerHeight}px`,
-      );
-    }
+  <main class="main">
 
-    window.addEventListener('resize', startHeightValue);
-    window.addEventListener('scroll', startHeightValue);
-
-    startHeightValue();
-  </script>
-
-
+  </main>
+  
+  <div class="overlay"></div>
   <script src="js/main.min.js"></script>
 </body>
 
