add patients section + adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,58 @@
         </div>
       </div>
     </section>
+
+    <section class="patients" id="consultations">
+      <div class="container">
+        <h2 class="title title--centered title--uppercase">
+          Запрошую на
+          <br>
+          онлайн консультації
+        </h2>
+
+        <ul class="list">
+          <li class="list__item">
+            <h3 class="list__item-title title">
+              Діти 
+              <small>(дошкільного та молодшого шкільного віку)</small>
+            </h3>
+            <div class="list__item-desc">
+              <p>вікові кризи; емоційна нестабільність, тривожність, страхи; адаптаційні труднощі (дитсадок, переїзд, нова школа); труднощі у спілкуванні або грубість, агресивність; психосоматичні прояви</p>
+              
+              <p class="accent accent--uppercase">лише оффлайн</p>
+            </div>
+          </li>
+
+          <li class="list__item">
+            <h3 class="list__item-title title">
+              Підлітки
+            </h3>
+            <div class="list__item-desc">
+              <p>внутрішні конфлікти, зниження самооцінки;тривога, депресивні стани, втрата мотивації; труднощі у спілкуванні з однолітками чи дорослими; проблеми з ідентичністю, орієнтацією, вибором професії; конфлікти у сім’ї, емоційне відчуження; вплив булінгу, травматичні події</p>
+            </div>
+          </li>
+
+          <li class="list__item">
+            <h3 class="list__item-title title">
+              Молоді дорослі 
+              <small>(до 21 року)</small>
+            </h3>
+            <div class="list__item-desc">
+              <p>переживання самотності, розгубленості; складнощі в побудові стосунків; сепарація від батьків, пошук свого шляху; заплутаність у почуттях, емоційна втома; наслідки дитячих травм, кризи самоідентичності</p>
+            </div>
+          </li>
+
+          <li class="list__item">
+            <h3 class="list__item-title title">
+              Батьки
+            </h3>
+            <div class="list__item-desc">
+              <p>труднощі у вихованні: відчуття безпорадності, втоми, провини; адаптація до нових етапів розвитку дитини (кризи, підлітковий вік); емоційне вигорання, перевантаження, тривожність; конфлікти з дітьми, відсутність контакту чи взаєморозуміння; переживання через складнощі у дитини (тривожність, агресивність, ізоляція тощо); сумніви у власній батьківській ролі, порівняння з іншими; виклики батьківства у новій країні, міжкультурні розбіжності</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 
   <div class="overlay"></div>
