added services section

--- a/app/index.html
+++ b/app/index.html
@@ -65,8 +65,8 @@
   </header>
 
   <main class="main">
-    <section class="hero">
-      <div class="hero__background"></div>
+    <section class="hero decorated decorated--right">
+      <div class="decorated__background"></div>
       <div class="container">
         <div class="hero__inner">
           <div class="hero__info">
@@ -97,13 +97,14 @@
         <ul class="list">
           <li class="list__item">
             <h3 class="list__item-title title">
-              Діти 
+              Діти
               <small>(дошкільного та молодшого шкільного віку)</small>
             </h3>
             <div class="list__item-desc">
-              <p>вікові кризи; емоційна нестабільність, тривожність, страхи; адаптаційні труднощі (дитсадок, переїзд, нова школа); труднощі у спілкуванні або грубість, агресивність; психосоматичні прояви</p>
-              
-              <p class="accent accent--uppercase">лише оффлайн</p>
+              <p>вікові кризи; емоційна нестабільність, тривожність, страхи; адаптаційні труднощі (дитсадок, переїзд,
+                нова школа); труднощі у спілкуванні або грубість, агресивність; психосоматичні прояви</p>
+
+              <p class="accent accent--uppercase accent--black">лише оффлайн</p>
             </div>
           </li>
 
@@ -112,17 +113,20 @@
               Підлітки
             </h3>
             <div class="list__item-desc">
-              <p>внутрішні конфлікти, зниження самооцінки;тривога, депресивні стани, втрата мотивації; труднощі у спілкуванні з однолітками чи дорослими; проблеми з ідентичністю, орієнтацією, вибором професії; конфлікти у сім’ї, емоційне відчуження; вплив булінгу, травматичні події</p>
+              <p>внутрішні конфлікти, зниження самооцінки;тривога, депресивні стани, втрата мотивації; труднощі у
+                спілкуванні з однолітками чи дорослими; проблеми з ідентичністю, орієнтацією, вибором професії;
+                конфлікти у сім’ї, емоційне відчуження; вплив булінгу, травматичні події</p>
             </div>
           </li>
 
           <li class="list__item">
             <h3 class="list__item-title title">
-              Молоді дорослі 
+              Молоді дорослі
               <small>(до 21 року)</small>
             </h3>
             <div class="list__item-desc">
-              <p>переживання самотності, розгубленості; складнощі в побудові стосунків; сепарація від батьків, пошук свого шляху; заплутаність у почуттях, емоційна втома; наслідки дитячих травм, кризи самоідентичності</p>
+              <p>переживання самотності, розгубленості; складнощі в побудові стосунків; сепарація від батьків, пошук
+                свого шляху; заплутаність у почуттях, емоційна втома; наслідки дитячих травм, кризи самоідентичності</p>
             </div>
           </li>
 
@@ -131,10 +135,55 @@
               Батьки
             </h3>
             <div class="list__item-desc">
-              <p>труднощі у вихованні: відчуття безпорадності, втоми, провини; адаптація до нових етапів розвитку дитини (кризи, підлітковий вік); емоційне вигорання, перевантаження, тривожність; конфлікти з дітьми, відсутність контакту чи взаєморозуміння; переживання через складнощі у дитини (тривожність, агресивність, ізоляція тощо); сумніви у власній батьківській ролі, порівняння з іншими; виклики батьківства у новій країні, міжкультурні розбіжності</p>
+              <p>труднощі у вихованні: відчуття безпорадності, втоми, провини; адаптація до нових етапів розвитку дитини
+                (кризи, підлітковий вік); емоційне вигорання, перевантаження, тривожність; конфлікти з дітьми,
+                відсутність контакту чи взаєморозуміння; переживання через складнощі у дитини (тривожність,
+                агресивність, ізоляція тощо); сумніви у власній батьківській ролі, порівняння з іншими; виклики
+                батьківства у новій країні, міжкультурні розбіжності</p>
             </div>
           </li>
         </ul>
+      </div>
+    </section>
+
+    <section class="services decorated decorated--left" id="services">
+      <div class="decorated__background"></div>
+      <div class="container">
+        <div class="services__inner">
+          <div class="services__info">
+            <h2 class="title">
+              Я 
+              <span class="accent">допомагаю:</span>
+            </h2>
+
+            <ul class="services__list">
+              <li class="services__item">
+                <h3>Дитині — краще зрозуміти свої почуття</h3>
+                <p>Працюю з емоційними та поведінковими труднощами, тривожністю, страхами, труднощами адаптації до
+                  дитячого садка або школи.</p>
+              </li>
+              <li class="services__item">
+                <h3>Батькам — знайти контакт із дитиною</h3>
+
+                <p>Підтримую у складних ситуаціях: кризи у вихованні, конфлікти, проблеми в комунікації, емоційна
+                  віддаленість дитини, почуття безсилля</p>
+              </li>
+              <li class="services__item">
+                <h3>Підлітку або молодій людині — знайти себе</h3>
+
+                <p>Допомагаю подолати тривогу, втому, втрату мотивації, проблеми у стосунках і виборі майбутнього.
+                  Підтримую у формуванні ідентичності</p>
+              </li>
+            </ul>
+
+            <p class="services__accent accent accent--wide">Гарантую 100% конфіденційність!</p>
+          </div>
+
+          <picture class="services__img">
+            <source srcset="images/hero.webp" type="image/webp">
+            <img src="images/hero.png" alt="Діана Линва - мої послуги" width="480" loading="lazy">
+          </picture>
+        </div>
       </div>
     </section>
   </main>
